--- a/assets/scss/_globals.scss
+++ b/assets/scss/_globals.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
-@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
+
+$bg: rgb(210,200,120);
 
 * {
     box-sizing: border-box;
@@ -7,4 +9,29 @@
 
 body {
     font-family: 'Montserrat';
+    background-color: $bg;
+    padding: 20px;
+
+    .btn {
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
+@mixin btn {
+    border: none;
+    border-radius: 50px;
+    transition: all ease 400ms;
+    background-color: transparent;
+    padding: 15px;
+    z-index: 1;
+
+    &:hover {
+        width: 80%;
+        background: $bg;
+        box-shadow:  20px 20px 60px #b3aa66, 
+                    -20px -20px 60px #f2e68a;
+        z-index: 1;
+    }
 }
